# resume-agent

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
examples/: sample_jd.txt  sample_resume.tex
src/resume_agent/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  graph.py  llm.py  schemas.py  state.py  updater.py
src/resume_agent/agents/: __init__.py  base_resume_loader.py  gap_analyzer.py  hitl.py  jd_extractor.py  jd_scraper.py  latex_validator.py  output_saver.py  pdf_compiler.py  pdf_validator.py  render_pages.py  resume_generator.py  suggestion_presenter.py  terminal_failure.py
src/resume_agent/templates/: default.tex.jinja
src/resume_agent/tools/: __init__.py  fs.py  latex_syntax.py  pdf_to_images.py  scrape.py  tectonic_compile.py
src/resume_agent/ui/: __init__.py  banner.py  console.py  panels.py  progress.py  prompts.py  setup_wizard.py
tests/: test_fs.py  test_graph_flow.py  test_latex_syntax.py  test_pipeline.py  test_schemas.py  test_scraper.py  test_security.py
